# SDL2-PLATFORMER

./: CMakeLists.txt  LICENSE  README.md  debian-compiler.sh  fedora42-compiler.sh  main.cpp
data/: entrance.csv  room1A.csv
include/: Camera.h  Entity.h  Game.h  Player.h  TileMap.h
src/: Camera.cpp  Entity.cpp  Game.cpp  Player.cpp  TileMap.cpp
